# data-analyst-env

./: Dockerfile  README.md  environment.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  workflow.html
server/: app.py
