[project]
name = "data-analyst-env"
version = "1.0.0"
description = "OpenEnv environment for real-world data analysis tasks"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "pydantic==2.9.2",
    "pandas==2.2.3",
    "numpy==1.26.4",
    "openai==1.51.0",
    "requests==2.32.3",
    "scikit-learn==1.5.2",
    "python-multipart==0.0.12",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
